--- a/src/main.scss
+++ b/src/main.scss
@@ -1,3 +1,7 @@
 @use "./styles/variables" as *;
 @use "./styles/reset";
 @use "./styles/layout";
+@use "./styles/header";
+@use "./styles/rules-section";
+@use "./styles/question-section";
+@use "./styles/answers-section";
