--- a/src/main.css
+++ b/src/main.css
@@ -30,14 +30,14 @@ body {
   text-align: center;
 }
 .rules__description {
-  padding: 30px 50px;
+  padding: 50px;
   font-family: "Inconsolata";
   font-size: 1.5rem;
 }
 .rules__button {
   background-color: white;
   margin: 20px;
-  padding: 10px;
+  padding: 10px 50px;
   font-size: 20px;
   border-radius: 20px;
 }
@@ -46,6 +46,12 @@ body {
   color: white;
 }
 
+@media screen and (min-width: 768px) {
+  .rules {
+    padding-top: 200px;
+    width: 50%;
+  }
+}
 .question {
   width: 100%;
   padding: 20px;
@@ -57,18 +63,27 @@ body {
   font-size: 24px;
 }
 
+@media screen and (min-width: 768px) {
+  .question {
+    width: 50%;
+  }
+  .question .question-container__image {
+    height: 250px;
+  }
+}
 .answers {
   width: 100%;
   padding: 20px;
 }
 .answers .answers-container {
   padding: 20px;
+  margin-bottom: 50px;
   background-color: blue;
   border-radius: 30px;
   display: flex;
   flex-direction: column;
 }
-.answers .answers-container__score, .answers .answers-container__pop-up {
+.answers .answers-container__total-score, .answers .answers-container__last-score {
   font-size: 24px;
   padding: 5px;
   background-color: blue;
@@ -79,4 +94,22 @@ body {
   height: 60px;
   border-radius: 55px;
   margin: 10px;
+}
+
+@media screen and (min-width: 768px) {
+  .answers {
+    width: 50%;
+  }
+  .answers .answers-container {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  .answers .answers-container__total-score, .answers .answers-container__last-score {
+    width: 100%;
+  }
+  .answers .answers-container__answer {
+    width: 40%;
+  }
 }/*# sourceMappingURL=main.css.map */
