--- a/src/styles/_question-section.scss
+++ b/src/styles/_question-section.scss
@@ -14,3 +14,15 @@
     }
   }
 }
+
+@media screen and (min-width: 768px) {
+  .question {
+    width: 50%;
+
+    .question-container {
+      &__image {
+        height: 250px;
+      }
+    }
+  }
+}
