--- a/src/styles/_rules-section.scss
+++ b/src/styles/_rules-section.scss
@@ -4,7 +4,7 @@
   text-align: center;
 
   &__description {
-    padding: 30px 50px;
+    padding: 50px;
     font-family: $secondary-font;
     font-size: 1.5rem;
   }
@@ -12,7 +12,7 @@
   &__button {
     background-color: $primary-color;
     margin: 20px;
-    padding: 10px;
+    padding: 10px 50px;
     font-size: 20px;
     border-radius: 20px;
   }
@@ -20,5 +20,12 @@
   &__button:hover {
     background-color: $secondary-color;
     color: $primary-color;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .rules {
+    padding-top: 200px;
+    width: 50%;
   }
 }
