updated html and design

--- a/src/styles/_question-section.scss
+++ b/src/styles/_question-section.scss
@@ -10,8 +10,17 @@
     }
 
     &__question {
+      padding-top: 20px;
       font-size: 24px;
+      font-weight: 800;
     }
+  }
+  &__button {
+    background-color: $primary-color;
+    margin: 20px;
+    padding: 10px 50px;
+    font-size: 20px;
+    border-radius: 20px;
   }
 }
 
@@ -21,7 +30,7 @@
 
     .question-container {
       &__image {
-        height: 250px;
+        height: 150px;
       }
     }
   }
