--- a/src/styles/_answers-section.scss
+++ b/src/styles/_answers-section.scss
@@ -2,11 +2,10 @@
 
 .answers {
   width: 100%;
-  padding: 20px;
+  padding: 0 20px;
 
   .answers-container {
-    padding: 20px;
-    margin-bottom: 50px;
+    margin-bottom: 20px;
     background-color: $answers-background-color;
     border-radius: 30px;
     display: flex;
@@ -14,8 +13,10 @@
 
     &__total-score,
     &__last-score {
+      border-top-left-radius: 30px;
+      border-top-right-radius: 30px;
       font-size: 24px;
-      padding: 5px;
+      padding-top: 10px;
       background-color: $answers-background-color;
       color: $primary-color;
     }
@@ -24,7 +25,7 @@
       font-size: 24px;
       height: 60px;
       border-radius: 55px;
-      margin: 10px;
+      margin: 15px;
     }
   }
 }
