--- a/src/styles/_rules-section.scss
+++ b/src/styles/_rules-section.scss
@@ -4,7 +4,7 @@
   text-align: center;
 
   &__description {
-    padding: 50px;
+    padding: 20px;
     font-family: $secondary-font;
     font-size: 1.5rem;
   }
@@ -25,7 +25,7 @@
 
 @media screen and (min-width: 768px) {
   .rules {
-    padding-top: 200px;
+    // padding-top: 200px;
     width: 50%;
   }
 }
