--- a/src/styles/_question-section.scss
+++ b/src/styles/_question-section.scss
@@ -16,12 +16,18 @@
       font-weight: 800;
     }
   }
+
   &__button {
     background-color: $primary-color;
     margin: 20px;
     padding: 10px 50px;
     font-size: 20px;
     border-radius: 20px;
+  }
+
+  &__score {
+    font-size: 20px;
+    height: 72px;
   }
 }
 
