--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -11,4 +11,16 @@
     color: $primary-color;
     font-size: 40px;
   }
+
+  &__restart-button {
+    background-color: $primary-color;
+    padding: 5px 10px;
+    font-size: 20px;
+    border-radius: 20px;
+  }
+
+  &__restart-button:hover {
+    background-color: $tertiary-color;
+    color: $primary-color;
+  }
 }
