--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -3,4 +3,14 @@ body {
   flex-direction: column;
   align-items: center;
   text-align: center;
+
+  .header {
+    position: relative;
+
+    &__restart-button {
+      position: absolute;
+      right: 20px;
+      top: 23px;
+    }
+  }
 }
