added game rules

--- a/src/styles/_rules-section.scss
+++ b/src/styles/_rules-section.scss
@@ -3,7 +3,8 @@
 .rules {
   text-align: center;
 
-  &__description {
+  &__description,
+  &__header {
     padding: 20px;
     font-family: $secondary-font;
     font-size: 1.5rem;
